--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
               <div class="home-info padd-15">
                 <h3 class="hello">
-                  Hello, my name isasd <span class="name">Farhad Gulizada</span>
+                  Hello, my name is <span class="name">Farhad Gulizada</span>
                 </h3>
                 <h3 class="my-profession">
                   I'm a <span class="typing">full-stack web developer</span>
